Fixed z-index do carousel e links

--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -71,6 +71,10 @@
                     width: 120px;
                 }
             }
+
+            a {
+                text-decoration: none;
+            }
             
             .button {
                 width: 300px;
