--- a/src/styles/_personagens.scss
+++ b/src/styles/_personagens.scss
@@ -117,6 +117,7 @@
     margin-top: -25px;
     width: 100%;
     display: none;
+    z-index: 0;
 
     @media (max-width: 767px) {
         display: block;
